--- a/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
+++ b/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
@@ -12,34 +12,27 @@
       <mp-cells ext-class="my-cells">
         <mp-cell value="设备编号" footer="{{}}">{{}}</mp-cell>
         <mp-cell value="设备名称" footer="{{}}"></mp-cell>
-        <mp-cell value="设备位置" footer="{{orderInfo.address_name}}">{{orderInfo.address_name}}</mp-cell>
+        <mp-cell value="设备位置" footer="{{orderInfo.address_name}}">{{orderInfo.addressName}}</mp-cell>
+        <mp-cell value="紧急程度" footer="{{urgentLevel[orderInfo.level]}}">{{urgentLevel[orderInfo.level]}}</mp-cell>
+        <mp-cell value="备注信息" footer="{{orderInfo.note}}">{{orderInfo.note}}</mp-cell>
+        <mp-cell value="预约时间" footer="{{orderInfo.appointTime}}">{{orderInfo.appointTime}}</mp-cell>
+        <mp-cell value="报修人" footer="{{orderInfo.userId}}">{{orderInfo.userId}}</mp-cell>
+        <mp-cell value="联系电话" footer="{{orderInfo.call}}" bindtap="makePhone" data-phone="{{orderInfo.call}}">{{orderInfo.call}}</mp-cell>
       </mp-cells>
     </view>
   </view>
   <view class="placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
       <mp-cells ext-class="my-cells">
-        <mp-cell value="故障程度" footer="{{}}"></mp-cell>
-        <mp-cell value="故障等级" footer="{{}}"></mp-cell>
-        <mp-cell value="故障类别" footer="{{}}"></mp-cell>
-        <mp-cell value="故障描述" footer="{{}}"></mp-cell>
-        <mp-cell value="计划时间" footer="{{}}"></mp-cell>
-        <mp-cell value="报修人" footer="{{orderInfo.userId}}">{{orderInfo.userId}}</mp-cell>
-        <mp-cell value="联系电话" footer="{{orderInfo.call}}">{{orderInfo.call}}</mp-cell>
-      </mp-cells>
-    </view>
-  </view>
-  <view class="placehold" hidden="{{currentNavtab==2 ? '' : true}}">
-    <view class="page__bd">
-      <mp-cells ext-class="my-cells">
         <mp-cell value="服务商" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
         <mp-cell value="维修工" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
         <mp-cell value="维修建议" footer="{{suggestionOne}}" bindtap="showAllSuggestion">{{suggestionOne}}</mp-cell>
+        <mp-cell value="备品备件" footer="{{}}" bindtap="onAddSpareParts"></mp-cell>
         <mp-cell value="维修结果" footer="{{orderInfo.result}}">{{orderInfo.result}}</mp-cell>
       </mp-cells>
     </view>
   </view>
-  <view class="placehold" hidden="{{currentNavtab==3 ? '' : true}}">
+  <view class="placehold" hidden="{{currentNavtab==2 ? '' : true}}">
 
     <view wx:for="{{orderLogs}}" wx:key="item" class="orderlog_view">
       <view class="orderlog_time">{{item.createdTime}}</view>
@@ -50,4 +43,7 @@
 </view>
 
 <template is="showAllSuggestion" data="{{showAllSuggestion,allSuggestion}}">
+</template>
+
+<template is="showSpareParts" data="{{showSpareParts,deviceOrderCount,allDeviceOrderList}}">
 </template>
