--- a/page/home/pages/serviceProvider/toBeDispatchOrderDetail/toBeDispatchOrderDetail.wxss
+++ b/page/home/pages/serviceProvider/toBeDispatchOrderDetail/toBeDispatchOrderDetail.wxss
@@ -1,4 +1,5 @@
 @import '../../../../common/lib/common.wxss';
+@import '../../../../common/modal/modal-tpl.wxss';
 .top-tab{
   width: 750rpx;
   height: 100rpx;
