--- a/page/home/pages/terminalUser/inspection/inspection.wxml
+++ b/page/home/pages/terminalUser/inspection/inspection.wxml
@@ -214,6 +214,17 @@
             <view class="weui-input">{{item.maintainerName}}</view>
           </view>
         </view>
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">附件</view>
+          </view>
+          <view class="weui-cell__bd" bindtap="clickUploadImg">
+            <view class="weui-input">上传图片</view>
+          </view>
+          <view class="weui-cell__bd" bindtap="clickUploadVideo">
+            <view class="weui-input">上传视频</view>
+          </view>
+        </view>
       </view>
     </view>
     <!--甲方联系人栏-->
