--- a/page/home/pages/terminalUserManager/toBeConfirm/toBeConfirm.wxml
+++ b/page/home/pages/terminalUserManager/toBeConfirm/toBeConfirm.wxml
@@ -3,17 +3,18 @@
     <!-- bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" -->
     <scroll-view scroll-y="true" class="container discovery">
       <mp-cells>
-        <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
+        <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.mdmcTask.id}}" bindtap="clickOrder">
           <view slot="title" class="mp-cell-title">
             <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image" />
           </view>
-          <view>{{order.programName}}</view>
-          <view>{{order.deviceName}}</view>
-          <view class="mp-cell-view">设备位置:{{order.address_name}}</view>
-          <view class="mp-cell-view">报修时间:{{order.appointTime}}</view>
+          <view>项目:{{order.pmcProjectDto.contractName}}</view>
+          <view>{{order.mdmcTask.deviceName}}</view>
+          <view class="mp-cell-view">故障位置:{{order.mdmcTask.addressName}}</view>
+          <view class="mp-cell-view">报修时间:{{order.mdmcTask.appointTime}}</view>
+
           <view class="operation_view">
-            <view class="operation_button" catchtap="pass" data-id="{{order.id}}" data-status="{{order.status}}">通过</view>
-            <view class="operation_button" catchtap="reject" data-id="{{order.id}}" data-status="{{order.status}}">驳回</view>
+            <view class="operation_button" catchtap="pass" data-id="{{order.mdmcTask.id}}" data-status="{{order.mdmcTask.status}}">通过</view>
+            <view class="operation_button" catchtap="reject" data-id="{{order.mdmcTask.id}}" data-status="{{order.mdmcTask.status}}">驳回</view>
           </view>
         </mp-cell>
       </mp-cells>
