--- a/page/home/pages/terminalUserManager/toBePay/toBePay.wxml
+++ b/page/home/pages/terminalUserManager/toBePay/toBePay.wxml
@@ -4,17 +4,17 @@
     <!-- bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" -->
     <scroll-view scroll-y="true" class="container discovery">
       <mp-cells>
-        <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
+        <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.mdmcTask.id}}" bindtap="clickOrder">
           <view slot="title" class="mp-cell-title">
             <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image" />
           </view>
-          <view>{{order.programName}}</view>
-          <view>{{order.deviceName}}</view>
-          <view class="mp-cell-view">设备位置:{{order.address_name}}</view>
-          <view class="mp-cell-view">报修时间:{{order.appointTime}}</view>
+          <view>项目:{{order.pmcProjectDto.contractName}}</view>
+          <view>{{order.mdmcTask.deviceName}}</view>
+          <view class="mp-cell-view">故障位置:{{order.mdmcTask.addressName}}</view>
+          <view class="mp-cell-view">报修时间:{{order.mdmcTask.appointTime}}</view>
+
           <view class="operation_view">
-            <view class="operation_button" catchtap="pay" data-id="{{order.id}}">支付</view>
-            <!-- <view class="operation_button" catchtap="reject" data-id="{{order.id}}">拒绝</view> -->
+            <view class="operation_button" catchtap="pay" data-id="{{order.mdmcTask.id}}">支付</view>
           </view>
         </mp-cell>
       </mp-cells>
@@ -22,5 +22,5 @@
   </view>
 </view>
 
-  <template is="bill" data="{{showBill,totalMoney}}">
-  </template>
+<template is="bill" data="{{showBill,totalMoney}}">
+</template>
