--- a/page/home/pages/serviceEngineer/inspectionChecked/inspectionChecked.wxml
+++ b/page/home/pages/serviceEngineer/inspectionChecked/inspectionChecked.wxml
@@ -2,7 +2,7 @@
     <view class="page__bd">
       <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
         <mp-cells>
-            <mp-cell wx:for="{{inspectionItems}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}" bindtap="clickInspectionItem">
+            <mp-cell wx:for="{{inspectionItems}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}" data-inspectionid="{{order.inspectionTaskId}}" bindtap="clickInspectionItem">
                 <view slot="title" style="position: relative;margin-right: 10px;">
                   <image src="../../../../../imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
                 </view>
