--- a/page/home/pages/serviceEngineer/repairingOrderDetail/repairingOrderDetail.wxml
+++ b/page/home/pages/serviceEngineer/repairingOrderDetail/repairingOrderDetail.wxml
@@ -25,16 +25,16 @@
   <view class="placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
       <mp-cells ext-class="my-cells">
-        <mp-cell value="服务商" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
-        <mp-cell value="维修工" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
+        <mp-cell value="服务商" footer="{{orderInfo.pmcProjectDto.partyBName}}">{{orderInfo.pmcProjectDto.partyBName}}</mp-cell>
+        <mp-cell value="维修工" footer="{{orderInfo.engineerDto.name}}">{{orderInfo.engineerDto.name}}</mp-cell>
         <mp-cell value="维修建议" footer="{{suggestionOne}}" bindtap="chooseSuggestion">
           {{suggestionOne}}
         </mp-cell>
         <mp-cell value="备品备件" footer="{{}}" bindtap="onAddSpareParts"></mp-cell>
-        <mp-cell value="维修结果" footer="{{orderInfo.result}}">{{orderInfo.result}}</mp-cell>
+        <mp-cell value="维修结果" footer="{{orderInfo.mdmcTask.result}}">{{orderInfo.mdmcTask.result}}</mp-cell>
 
         <modal id="modal" hidden="{{hiddenmodalput}}" title="维修建议" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm">
-          <textarea placeholder="请输入维修建议" bindinput="suggestion" value="{{orderInfo.suggestion}}"></textarea>
+          <textarea placeholder="请输入维修建议" bindinput="suggestion" value="{{orderInfo.mdmcTask.suggestion}}"></textarea>
         </modal>
       </mp-cells>
     </view>
